added readme and comments

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="objects/index.js"></script>
+    <script src="objects/main.js"></script>
     <title>JS Practices</title>
 </head>
 <body>
